crates/pgt_hover/tests/snapshots/hover_custom_type_with_properties.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
create function getfoo() returns setof compfoo as $$ select fooid, fooname from foo $$ language sql;
                                           ↑ hovered here
```

# Hover Results
### `public.compfoo` (Custom Type)  
```plain  
Attributes:
- f1: int4
- f2: text

  
```  
---    
```plain  

  
```
