crates/pgt_hover/tests/snapshots/table_hover.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select id from users
                  ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
####   
---    
~0 rows, ~0 dead rows, 8.19 kB
